tests/ui/basic/add_function_to_int.stderr
error: operands for `+` differ in type: `fn` + `int`
 --> tests/ui/basic/add_function_to_int.rs:7:13
  |
7 |         foo + 5
  |             ^
